--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "repository": "https://github.com/ririko25/tic-tac-toe.git",
   "author": "ririko <ririkokanikama25@yahoo.co.jp>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "@babel/preset-react": "^7.0.0-beta.44",
+    "babel-loader": "^8.0.0-beta",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "html-webpack-plugin": "^3.2.0"
+    "react-dom": "^16.3.0"
   }
 }
